Fixed some form alignment styling

--- a/client/src/components/Calendar.css
+++ b/client/src/components/Calendar.css
@@ -26,7 +26,7 @@
 #select-options {
 	display: grid;
 	grid-template-columns: 80px 52px 114px;
-	margin: 20px 0px;
+	margin: 20px 0px 30px 0px;
 	grid-column-gap: 80px;
 	justify-content: start;
 	box-sizing: border-box;
